package(default_visibility = ["//visibility:public"])
load("@rules_haskell//haskell:cabal.bzl", "haskell_cabal_binary", "haskell_cabal_library")

haskell_cabal_library(
    name = "cabal-test-th",
	version = "0.0.1",
    srcs = [
        'Main.hs',
        'QQ.hs',
        'cabal_test_th.cabal',
    ],
)

haskell_cabal_binary(
    name = "anexe",
    srcs = [
        'Main.hs',
        'QQ.hs',
        'cabal_test_th.cabal',
    ],
)
